--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,38 +1,8 @@
-<div class="container"><div class="header" style="background:lightsteelblue;height:100px;text-align: right">
+<div class="header" style="background:lightsteelblue;height:100px;text-align: right">
   
   <a class="navbar-brand" routerLink='about'>About Us</a>
   <a class="navbar-brand" routerLink='contact'>Contact Us</a>
   <a class="navbar-brand" routerLink='feedback'>Feedback</a>
-
-
-
-  
 </div>
-<div class="content">
-  <div class="table-responsive">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th *ngFor="let col of columns">
-                        {{col}}
-                    </th>
-                    
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let person of responseArray">
-                    <td>
-                        {{person.id}}
-                    </td>
-                    <td>
-                        {{person.username}}
-                    </td>
-                    <td>
-                        {{person.email}}
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-</div></div></div>
+<router-outlet ></router-outlet>
 
