--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="header" style="background:lightsteelblue;height:100px;text-align: right">
-  
+  <a class="navbar-brand" routerLink='home'>Home</a>
   <a class="navbar-brand" routerLink='about'>About Us</a>
   <a class="navbar-brand" routerLink='contact'>Contact Us</a>
   <a class="navbar-brand" routerLink='feedback'>Feedback</a>
